# voltra-playground

./: .gitignore  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
mobile/: .prettierignore  app.json  babel.config.js  commitlint.config.js  eslint.config.mjs  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
mobile/.cursor/rules/: architecture.mdc  components.mdc  domain.mdc  exercise-session.mdc  hooks.mdc  screens.mdc  stores.mdc  styling.mdc  testing.mdc  typescript.mdc
mobile/app/: +not-found.tsx  _layout.tsx
mobile/app/(tabs)/: _layout.tsx  discover.tsx  history.tsx  index.tsx  modes.tsx  settings.tsx  workout.tsx
mobile/docs/: ANDROID-DEVELOPMENT.md  MAC-DEVELOPMENT.md  iOS-DEVELOPMENT.md
mobile/docs/plans/: 2026-02-16-titan-design-migration-design.md  2026-02-16-titan-design-migration-plan.md
mobile/patches/: react-native-ble-plx+3.5.0.patch
mobile/scripts/: test-node-connection.ts
mobile/src/: types.d.ts
mobile/src/__fixtures__/: index.ts  seeder.ts
mobile/src/analytics/: advancedAnalytics.ts  index.ts  velocity-constants.ts  velocity-profile.ts
mobile/src/ble/: index.ts  native.ts  proxy.ts  types.ts
mobile/src/components/: index.ts
mobile/src/config/: index.ts
mobile/src/data/: debug-config.ts  index.ts  provider.ts
mobile/src/domain/: display-utils.ts  index.ts
mobile/test/: react-native-mock.ts
relay/: main.py  pyproject.toml  requirements.txt
relay/tests/: conftest.py  test_api.py  test_relay.py  test_websocket.py
(+296 files in other folders)
